--- a/generate/templates/generate/login.html
+++ b/generate/templates/generate/login.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
+{% extends "generate/base.html" %}
+
+
+{% block title %}
+Login Page
+{% endblock %}
+
+    
+{% block content %}
     <h1>Login</h1>
     <form method="post">
         {% csrf_token %}
@@ -21,5 +23,5 @@
         <input type="password" id="password" name="password" required><br>
         <button type="submit">Login</button>
     </form>
-</body>
-</html>
+
+{% endblock %}
