--- a/generate/templates/generate/base.html
+++ b/generate/templates/generate/base.html
@@ -5,11 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block page_title %}AVATAR{% endblock %}</title>  
+
+    
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+
+    <link rel ="stylesheet" href = "{% static "generate/base.css" %}">
+  
+
     {% block css_files %}
     {% endblock%} 
 </head>
 <body>
-    {% block content %} 
-    {% endblock %}
+    <nav>
+        <div class="logo">
+            <img src="{% static 'generate/photos/p7.png' %}" alt="Your Logo">
+        </div>
+        <ul class="nav-links">
+            {% comment %} <li><a href="/">Home</a></li> {% endcomment %}
+            <li>GENERATE RANDOM AVATAR</li>
+            {% comment %} <li><a href="/contact">Contact</a></li> {% endcomment %}
+        </ul>
+        <a class="random-button" href="/random">Random</a>
+    </nav>
+    <section>
+        {% block content %} 
+        {% endblock %}
+    </section>
 </body>
 </html>
