--- a/generate/templates/generate/random.html
+++ b/generate/templates/generate/random.html
@@ -1,1 +1,23 @@
-{{ avatar_svg|safe }}
+
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Page </title>
+    
+
+    
+    <link rel ="stylesheet" href = "{% static "generate/random.css" %}">
+  
+
+    
+</head>
+<body>
+    <div class="image-container">
+        {{ avatar_svg|safe }}
+    </div>
+</body>
+
+
