--- a/generate/templates/generate/login.html
+++ b/generate/templates/generate/login.html
@@ -1,14 +1,65 @@
 {% extends "generate/base.html" %}
-
+{% load static %}
 
 {% block title %}
 Login Page
 {% endblock %}
 
+{% block css_files %}   
+<link rel ="stylesheet" href = "{% static "generate/login.css" %}">
+{% endblock%}
     
 {% block content %}
-    <h1>Login</h1>
+<div class="background-photos">
+    <div class="background-photo photo11">
+        <img src="{% static 'generate/photos/p11.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo12">
+        <img src="{% static 'generate/photos/p12.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo13">
+        <img src="{% static 'generate/photos/p13.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo14">
+        <img src="{% static 'generate/photos/p14.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo15">
+        <img src="{% static 'generate/photos/p16.png' %}" alt="{{ post.title }}" />
+    </div> 
+    <div class="background-photo photo1">
+        <img src="{% static 'generate/photos/p1.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo2">
+        <img src="{% static 'generate/photos/p2.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo3">
+        <img src="{% static 'generate/photos/p3.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo4">
+        <img src="{% static 'generate/photos/p4.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo5">
+        <img src="{% static 'generate/photos/p17.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo6">
+        <img src="{% static 'generate/photos/p6.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo7">
+        <img src="{% static 'generate/photos/p18.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo8">
+        <img src="{% static 'generate/photos/p8.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo9">
+        <img src="{% static 'generate/photos/p9.png' %}" alt="{{ post.title }}" />
+    </div>
+    <div class="background-photo photo10">
+        <img src="{% static 'generate/photos/p10.png' %}" alt="{{ post.title }}" />
+    </div>
+    
+</div>
     <form method="post">
+        <h1>Login</h1>
         {% csrf_token %}
         {% if messages %}
             <ul class="messages">
