--- a/generate/templates/generate/signup.html
+++ b/generate/templates/generate/signup.html
@@ -14,11 +14,12 @@ Login Page
 
 {% block content %}
     <div class="background-photos">
-        <div class="background-photo photo1"><img src="{% static 'generate/photos/p1.png' %}" alt="{{ post.title }}" />
+        
+        <div class="background-photo photo1">
+            <img src="{% static 'generate/photos/p1.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo2">
             <img src="{% static 'generate/photos/p2.png' %}" alt="{{ post.title }}" />
-
         </div>
         <div class="background-photo photo3">
             <img src="{% static 'generate/photos/p3.png' %}" alt="{{ post.title }}" />
@@ -27,13 +28,13 @@ Login Page
             <img src="{% static 'generate/photos/p4.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo5">
-            <img src="{% static 'generate/photos/p5.png' %}" alt="{{ post.title }}" />
+            <img src="{% static 'generate/photos/p17.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo6">
             <img src="{% static 'generate/photos/p6.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo7">
-            <img src="{% static 'generate/photos/p7.png' %}" alt="{{ post.title }}" />
+            <img src="{% static 'generate/photos/p18.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo8">
             <img src="{% static 'generate/photos/p8.png' %}" alt="{{ post.title }}" />
@@ -41,37 +42,59 @@ Login Page
         <div class="background-photo photo9">
             <img src="{% static 'generate/photos/p9.png' %}" alt="{{ post.title }}" />
         </div>
+        <div class="background-photo photo10">
+            <img src="{% static 'generate/photos/p10.png' %}" alt="{{ post.title }}" />
+        </div>
+        <div class="background-photo photo11">
+            <img src="{% static 'generate/photos/p11.png' %}" alt="{{ post.title }}" />
+        </div>
+        <div class="background-photo photo12">
+            <img src="{% static 'generate/photos/p12.png' %}" alt="{{ post.title }}" />
+        </div>
+        <div class="background-photo photo13">
+            <img src="{% static 'generate/photos/p13.png' %}" alt="{{ post.title }}" />
+        </div>
+        <div class="background-photo photo14">
+            <img src="{% static 'generate/photos/p14.png' %}" alt="{{ post.title }}" />
+        </div>
+        <div class="background-photo photo15">
+            <img src="{% static 'generate/photos/p16.png' %}" alt="{{ post.title }}" />
+        </div> 
     </div>
+    
 
-    <div class = "container">
-        <div class="card">
-            <div class="card-body">
-                <h1>Sign Up</h1>
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form.username.label_tag }}
-                    {{ form.username }}
-                    {{ form.username.errors }}
-                    {{ form.password1.label_tag }}
-                    {{ form.password1 }}
-                    {{ form.password2.label_tag }}
-                    {{ form.password2 }}
-                    <div class="buttons">
-                        <button type="submit">Sign Up</button>
-                        <button type="button" onclick="location.href='{% url 'login' %}'">Log In</button>
+
+
+    {% comment %} <div class = "container">        
+        <div class="row justify-content-center align-items-center" style="height: 100vh;">
+            <div class="col-md-6">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h1 class="card-title">Sign Up</h1>
+                            <p class="card-text"> {% endcomment %}
+                                <form method="post">
+                                    {% csrf_token %}
+                                    {{ form.username.label_tag }}
+                                    {{ form.username }}
+                                    {{ form.username.errors }}
+                                    {{ form.password1.label_tag }}
+                                    {{ form.password1 }}
+                                    {{ form.password2.label_tag }}
+                                    {{ form.password2 }}
+                                    <div class = "buttons">
+                                        <div class="d-flex justify-content-between">
+                                            <button type="submit">Sign Up</button>
+                                            <button type="button" onclick="location.href='{% url 'login' %}'">Log In</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            {% comment %} </p>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
-    
-        {% comment %} <div class="card login-card">
-            <div class="card-body">
-                <form method="get" action="{% url 'login' %}">
-                    <p>Already have an existing account? </p>
-                    <button type="submit">Log In</button>
-                </form>
-            </div>
-        </div> {% endcomment %}
+     {% endcomment %}
     </div>
+
 
 {% endblock %}
