--- a/generate/templates/generate/signup.html
+++ b/generate/templates/generate/signup.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Login Page
+SIGNUP PAGE
 {% endblock %}
 
 {% block css_files %}
@@ -34,7 +34,7 @@ Login Page
             <img src="{% static 'generate/photos/p6.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo7">
-            <img src="{% static 'generate/photos/p18.png' %}" alt="{{ post.title }}" />
+            <img src="{% static 'generate/photos/p10.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo8">
             <img src="{% static 'generate/photos/p8.png' %}" alt="{{ post.title }}" />
@@ -43,10 +43,10 @@ Login Page
             <img src="{% static 'generate/photos/p9.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo10">
-            <img src="{% static 'generate/photos/p10.png' %}" alt="{{ post.title }}" />
+            <img src="{% static 'generate/photos/p18.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo11">
-            <img src="{% static 'generate/photos/p11.png' %}" alt="{{ post.title }}" />
+            <img src="{% static 'generate/photos/p16.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo12">
             <img src="{% static 'generate/photos/p12.png' %}" alt="{{ post.title }}" />
@@ -58,7 +58,7 @@ Login Page
             <img src="{% static 'generate/photos/p14.png' %}" alt="{{ post.title }}" />
         </div>
         <div class="background-photo photo15">
-            <img src="{% static 'generate/photos/p16.png' %}" alt="{{ post.title }}" />
+            <img src="{% static 'generate/photos/p11.png' %}" alt="{{ post.title }}" />
         </div> 
     </div>
     
