--- a/generate/static/generate/signup.css
+++ b/generate/static/generate/signup.css
@@ -38,7 +38,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(215, 209, 209, 0.031); /* Adjust the alpha (fourth) value for transparency */
+    background: rgba(215, 209, 209, 0.031);
     z-index: 1;
 }
 
