--- a/generate/templates/generate/base.html
+++ b/generate/templates/generate/base.html
@@ -7,28 +7,37 @@
     <title>{% block page_title %}AVATAR{% endblock %}</title>  
 
     
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-
     <link rel ="stylesheet" href = "{% static "generate/base.css" %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Chakra+Petch:ital,wght@1,700&display=swap" rel="stylesheet">
   
 
     {% block css_files %}
     {% endblock%} 
+
 </head>
+
+
 <body>
     <nav>
-        <div class="logo">
-            <img src="{% static 'generate/photos/p7.png' %}" alt="Your Logo">
-        </div>
+        <a href="{% url 'signup' %}">  <!-- Add this line -->
+            <div class="logo">
+                <img src="{% static 'generate/photos/logo.png' %}" alt="Your Logo">
+            </div>
+        </a>
+
         <ul class="nav-links">
             {% comment %} <li><a href="/">Home</a></li> {% endcomment %}
             <li>GENERATE RANDOM AVATAR</li>
             {% comment %} <li><a href="/contact">Contact</a></li> {% endcomment %}
         </ul>
+        
         <a class="random-button" href="/random">Random</a>
     </nav>
     <section>
