--- a/generate/templates/generate/index.html
+++ b/generate/templates/generate/index.html
@@ -12,7 +12,7 @@ GENERATE AVATAR
 
 {% block content %}
 
-
+    <a class="random-button" href="/logout">Logout</a>
     <p><p class = "second"><i>To generate a random avatar click below :</i></p><button id="random">Generate Random</button></p>
     <form id="form">
         <p class = second ><i>To generate a seed click below: </i></p>
